--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.14.0
   firebase_messaging: ^15.2.7
+  flutter_local_notifications: ^19.3.0
 
 dev_dependencies:
   flutter_test:
